crates/mabo-parser/tests/snapshots/parser__parse@alias_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Sample alias.\nalias Sample = u32;"
input_file: crates/mabo-parser/tests/inputs/alias_basic.mabo
---
Schema {
    path: Some(
        "alias_basic.mabo",
    ),
    source: "/// Sample alias.\nalias Sample = u32;\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Alias(
            Alias {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Sample alias.",
                        },
                    ],
                ),
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                target: Type {
                    value: U32,
                },
            },
        ),
    ],
}
