crates/mabo-parser/tests/snapshots/parser__parse@attribute_multi.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "#[validate(min = 1, max = 100)]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attribute_multi.mabo
---
Schema {
    path: Some(
        "attribute_multi.mabo",
    ),
    source: "#[validate(min = 1, max = 100)]\nstruct Sample\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "validate",
                            value: Multi(
                                [
                                    Attribute {
                                        name: "min",
                                        value: Single(
                                            Literal {
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                    Attribute {
                                        name: "max",
                                        value: Single(
                                            Literal {
                                                value: Int(
                                                    100,
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            ),
                        },
                    ],
                ),
                keyword: Struct,
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
