crates/mabo-parser/tests/snapshots/parser__parse@attribute_unit.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "#[deprecated]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attribute_unit.mabo
---
Schema {
    path: Some(
        "attribute_unit.mabo",
    ),
    source: "#[deprecated]\nstruct Sample\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "deprecated",
                            value: Unit,
                        },
                    ],
                ),
                keyword: Struct,
                name: Name {
                    value: "Sample",
                },
                generics: None,
                fields: Unit,
            },
        ),
    ],
}
