crates/mabo-parser/tests/snapshots/parser__parse@const_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "const BOOL_TRUE: bool = true;\nconst BOOL_FALSE: bool = false;\nconst INT: u32 = 100;\nconst FLOAT: f64 = 5.5;\nconst STRING: String = \"value\";\nconst BYTES: Bytes = [1, 2, 3];"
input_file: crates/mabo-parser/tests/inputs/const_basic.mabo
---
Schema {
    path: Some(
        "const_basic.mabo",
    ),
    source: "const BOOL_TRUE: bool = true;\nconst BOOL_FALSE: bool = false;\nconst INT: u32 = 100;\nconst FLOAT: f64 = 5.5;\nconst STRING: String = \"value\";\nconst BYTES: Bytes = [1, 2, 3];\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: Name {
                    value: "BOOL_TRUE",
                },
                ty: Type {
                    value: Bool,
                },
                value: Literal {
                    value: Bool(
                        true,
                    ),
                },
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: Name {
                    value: "BOOL_FALSE",
                },
                ty: Type {
                    value: Bool,
                },
                value: Literal {
                    value: Bool(
                        false,
                    ),
                },
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: Name {
                    value: "INT",
                },
                ty: Type {
                    value: U32,
                },
                value: Literal {
                    value: Int(
                        100,
                    ),
                },
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: Name {
                    value: "FLOAT",
                },
                ty: Type {
                    value: F64,
                },
                value: Literal {
                    value: Float(
                        5.5,
                    ),
                },
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: Name {
                    value: "STRING",
                },
                ty: Type {
                    value: String,
                },
                value: Literal {
                    value: String(
                        "value",
                    ),
                },
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: Name {
                    value: "BYTES",
                },
                ty: Type {
                    value: Bytes,
                },
                value: Literal {
                    value: Bytes(
                        [
                            1,
                            2,
                            3,
                        ],
                    ),
                },
            },
        ),
    ],
}
