crates/mabo-parser/tests/snapshots/parser__parse@enum_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Sample enum.\nenum Sample {\n    One @1,\n    /// Second variant\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        /// Second field of third variant\n        field2: bool @2,\n    } @3,\n}"
input_file: crates/mabo-parser/tests/inputs/enum_basic.mabo
---
Schema {
    path: Some(
        "enum_basic.mabo",
    ),
    source: "/// Sample enum.\nenum Sample {\n    One @1,\n    /// Second variant\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        /// Second field of third variant\n        field2: bool @2,\n    } @3,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Enum(
            Enum {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Sample enum.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Enum,
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                brace: Brace,
                variants: [
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "One",
                        },
                        fields: Unit,
                        id: Some(
                            Id {
                                value: 1,
                            },
                        ),
                        comma: Some(
                            Comma,
                        ),
                    },
                    Variant {
                        comment: Comment(
                            [
                                CommentLine {
                                    value: "Second variant",
                                },
                            ],
                        ),
                        name: Name {
                            value: "Two",
                        },
                        fields: Unnamed(
                            Parenthesis,
                            [
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Some(
                                        Id {
                                            value: 1,
                                        },
                                    ),
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                                UnnamedField {
                                    ty: Type {
                                        value: U64,
                                    },
                                    id: Some(
                                        Id {
                                            value: 2,
                                        },
                                    ),
                                    comma: None,
                                },
                            ],
                        ),
                        id: Some(
                            Id {
                                value: 2,
                            },
                        ),
                        comma: Some(
                            Comma,
                        ),
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Three",
                        },
                        fields: Named(
                            Brace,
                            [
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field1",
                                    },
                                    colon: Colon,
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Some(
                                        Id {
                                            value: 1,
                                        },
                                    ),
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                                NamedField {
                                    comment: Comment(
                                        [
                                            CommentLine {
                                                value: "Second field of third variant",
                                            },
                                        ],
                                    ),
                                    name: Name {
                                        value: "field2",
                                    },
                                    colon: Colon,
                                    ty: Type {
                                        value: Bool,
                                    },
                                    id: Some(
                                        Id {
                                            value: 2,
                                        },
                                    ),
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                            ],
                        ),
                        id: Some(
                            Id {
                                value: 3,
                            },
                        ),
                        comma: Some(
                            Comma,
                        ),
                    },
                ],
            },
        ),
    ],
}
